@@ -1,5 +1,5 @@
 /*******************************************************************************
- * Copyright (c) 1991, 2019 IBM Corp. and others
+ * Copyright (c) 1991, 2020 IBM Corp. and others
  *
  * This program and the accompanying materials are made available under
  * the terms of the Eclipse Public License 2.0 which accompanies this
@@ -59,6 +59,7 @@ import java.io.PrintWriter;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Calendar;
+import java.util.Collection;
 import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
@@ -67,9 +68,9 @@ import java.util.Properties;
 import java.util.regex.Matcher;
 import java.util.regex.Pattern;
 
+import com.ibm.j9ddr.BytecodeGenerator;
 import com.ibm.j9ddr.CTypeParser;
 import com.ibm.j9ddr.StructureReader;
-import com.ibm.j9ddr.StructureReader.ConstantDescriptor;
 import com.ibm.j9ddr.StructureReader.FieldDescriptor;
 import com.ibm.j9ddr.StructureReader.StructureDescriptor;
 import com.ibm.j9ddr.StructureTypeManager;
@@ -94,6 +95,7 @@ public class PointerGenerator {
 	File outputDirHelpers;
 	private boolean cacheClass = false;
 	private boolean cacheFields = false;
+	private boolean generalizeSimpleTypes = false;
 	private Properties cacheProperties = null;
 
 	private StructureTypeManager typeManager;
@@ -186,20 +188,23 @@ public class PointerGenerator {
 
 		ByteArrayOutputStream newContents = new ByteArrayOutputStream(length);
 		PrintWriter writer = new PrintWriter(newContents);
+		String className = structure.getName();
+		Map<String, String> constants = BytecodeGenerator.getConstantsAndAliases(structure);
+
 		writeCopyright(writer);
 		writer.format("package %s;%n", opts.get("-p"));
 		writeBuildFlagImports(writer);
 		writer.println();
-		writeClassComment(writer, structure.getName());
-		writer.format("public final class %s {%n", structure.getName());
+		writeClassComment(writer, className);
+		writer.format("public final class %s {%n", className);
 		writer.println();
 		writer.println("\t// Do not instantiate constant classes");
-		writer.format("\tprivate %s() {%n", structure.getName());
+		writer.format("\tprivate %s() {%n", className);
 		writer.format("\t}%n");
 		writer.println();
-		writeBuildFlags(writer, structure);
+		writeBuildFlags(writer, constants.keySet());
 		writer.println();
-		writeBuildFlagsStaticInitializer(writer, structure);
+		writeBuildFlagsStaticInitializer(writer, className, constants);
 		writer.println("}");
 		writer.close();
 
@@ -211,41 +216,40 @@ public class PointerGenerator {
 		}
 	}
 
-	private static void writeBuildFlagsStaticInitializer(PrintWriter writer, StructureDescriptor structure) {
-		Collections.sort(structure.getConstants());
-
+	private static void writeBuildFlagsStaticInitializer(PrintWriter writer, String className, Map<String, String> constants) {
 		writer.println("\tstatic {");
-		writer.println("\t\tHashMap<String, Boolean> defaultValues = new HashMap<>();");
+		writer.println("\t\tHashSet<String> flags$ = new HashSet<>();");
 		writer.println();
-		writer.println("\t\t// Edit default values here");
 
-		for (ConstantDescriptor constant : structure.getConstants()) {
-			writer.format("\t\tdefaultValues.put(\"%s\", Boolean.FALSE);%n", constant.getName());
-		}
-
-		writer.println();
 		writer.println("\t\ttry {");
-		writer.println("\t\t\tClassLoader loader = " + structure.getName() + ".class.getClassLoader();");
-		writer.println("\t\t\tif (!(loader instanceof com.ibm.j9ddr.J9DDRClassLoader)) {");
+		writer.println("\t\t\tClassLoader loader$ = " + className + ".class.getClassLoader();");
+		writer.println("\t\t\tif (!(loader$ instanceof com.ibm.j9ddr.J9DDRClassLoader)) {");
 		writer.println("\t\t\t\tthrow new IllegalArgumentException(\"Cannot determine the runtime loader\");");
 		writer.println("\t\t\t}");
-		writer.println("\t\t\tClass<?> runtimeClass = ((com.ibm.j9ddr.J9DDRClassLoader) loader).loadClassRelativeToStream(\"structure." + structure.getName() + "\", false);");
-		writer.println("\t\t\tField[] fields = runtimeClass.getFields();");
-		writer.println("\t\t\tfor (int i = 0; i < fields.length; i++) {");
-		writer.println("\t\t\t\tField field = fields[i];");
-		writer.println("\t\t\t\t// Overwrite default value with real value if it exists.");
-		writer.println("\t\t\t\tdefaultValues.put(field.getName(), field.getLong(runtimeClass) != 0);");
+		writer.println("\t\t\tClass<?> runtimeClass = ((com.ibm.j9ddr.J9DDRClassLoader) loader$).loadClassRelativeToStream(\"structure." + className + "\", false);");
+		writer.println("\t\t\tfor (Field field : runtimeClass.getFields()) {");
+		writer.println("\t\t\t\tif (field.getLong(runtimeClass) != 0) {");
+		writer.println("\t\t\t\t\tflags$.add(field.getName());");
+		writer.println("\t\t\t\t}");
 		writer.println("\t\t\t}");
-		writer.println("\t\t} catch (ClassNotFoundException e) {");
-		writer.println("\t\t\tthrow new IllegalArgumentException(String.format(\"Can not initialize flags from core file.%n%s\", e.getMessage()));");
-		writer.println("\t\t} catch (IllegalAccessException e) {");
+		writer.println("\t\t} catch (ClassNotFoundException | IllegalAccessException e) {");
 		writer.println("\t\t\tthrow new IllegalArgumentException(String.format(\"Can not initialize flags from core file.%n%s\", e.getMessage()));");
 		writer.println("\t\t}");
 		writer.println();
 
-		for (ConstantDescriptor constant : structure.getConstants()) {
-			writer.format("\t\t%s = defaultValues.get(\"%s\");%n", constant.getName(), constant.getName());
+		for (Map.Entry<String, String> entry : constants.entrySet()) {
+			String name = entry.getKey();
+			String alternate = entry.getValue();
+
+			writer.format("\t\t%s = flags$.contains(\"%s\")", name, name);
+
+			if (alternate != null) {
+				writer.format(" || flags$.contains(\"%s\")", alternate);
+			}
+
+			writer.println(";");
 		}
+
 		writer.println("\t}");
 	}
 
@@ -405,11 +409,10 @@ public class PointerGenerator {
 		}
 	}
 
-	private static void writeBuildFlags(PrintWriter writer, StructureDescriptor structure) {
+	private static void writeBuildFlags(PrintWriter writer, Collection<String> names) {
 		writer.println("\t// Build Flags");
-		Collections.sort(structure.getConstants());
-		for (ConstantDescriptor constant : structure.getConstants()) {
-			writer.format("\tpublic static final boolean %s;%n", constant.getName());
+		for (String name : names) {
+			writer.format("\tpublic static final boolean %s;%n", name);
 		}
 	}
 
@@ -970,7 +973,7 @@ public class PointerGenerator {
 		if (cacheFields) {
 			writer.format("\t\tif (CACHE_FIELDS) {%n");
 			writer.format("\t\t\tif (%s_cache == null) {%n", getter);
-			writer.format("\t\t\t\t%s_cache = new Boolean(getBoolAtOffset(%s._%sOffset_));%n", getter, structure.getName(), offsetConstant);
+			writer.format("\t\t\t\t%s_cache = Boolean.valueOf(getBoolAtOffset(%s._%sOffset_));%n", getter, structure.getName(), offsetConstant);
 			writer.format("\t\t\t}%n");
 			writer.format("\t\t\treturn %s_cache.booleanValue();%n", getter);
 			writer.format("\t\t} else {%n\t");
@@ -995,7 +998,7 @@ public class PointerGenerator {
 		if (cacheFields) {
 			writer.format("\t\tif (CACHE_FIELDS) {%n");
 			writer.format("\t\t\tif (%s_cache == null) {%n", getter);
-			writer.format("\t\t\t\t%s_cache = new Double(getDoubleAtOffset(%s._%sOffset_));%n", getter, structure.getName(), offsetConstant);
+			writer.format("\t\t\t\t%s_cache = Double.valueOf(getDoubleAtOffset(%s._%sOffset_));%n", getter, structure.getName(), offsetConstant);
 			writer.format("\t\t\t}%n");
 			writer.format("\t\t\treturn %s_cache.doubleValue();%n", getter);
 			writer.format("\t\t} else {%n\t");
@@ -1023,13 +1026,13 @@ public class PointerGenerator {
 			writer.format("\t\tif (CACHE_FIELDS) {%n");
 			writer.format("\t\t\tif (%s_cache == null) {%n", getter);
 			writer.format("\t\t\t\tif (%s.SIZEOF == 1) {%n", enumType);
-			writer.format("\t\t\t\t\t%s_cache = new Long(getByteAtOffset(%s._%sOffset_));%n", getter, structure.getName(), offsetConstant);
+			writer.format("\t\t\t\t\t%s_cache = Long.valueOf(getByteAtOffset(%s._%sOffset_));%n", getter, structure.getName(), offsetConstant);
 			writer.format("\t\t\t\t} else if (%s.SIZEOF == 2) {%n", enumType);
-			writer.format("\t\t\t\t\t%s_cache = new Long(getShortAtOffset(%s._%sOffset_));%n", getter, structure.getName(), offsetConstant);
+			writer.format("\t\t\t\t\t%s_cache = Long.valueOf(getShortAtOffset(%s._%sOffset_));%n", getter, structure.getName(), offsetConstant);
 			writer.format("\t\t\t\t} else if (%s.SIZEOF == 4) {%n", enumType);
-			writer.format("\t\t\t\t\t%s_cache = new Long(getIntAtOffset(%s._%sOffset_));%n", getter, structure.getName(), offsetConstant);
+			writer.format("\t\t\t\t\t%s_cache = Long.valueOf(getIntAtOffset(%s._%sOffset_));%n", getter, structure.getName(), offsetConstant);
 			writer.format("\t\t\t\t} else if (%s.SIZEOF == 8) {%n", enumType);
-			writer.format("\t\t\t\t\t%s_cache = new Long(getLongAtOffset(%s._%sOffset_));%n", getter, structure.getName(), offsetConstant);
+			writer.format("\t\t\t\t\t%s_cache = Long.valueOf(getLongAtOffset(%s._%sOffset_));%n", getter, structure.getName(), offsetConstant);
 			writer.format("\t\t\t\t} else {%n");
 			writer.format("\t\t\t\t\tthrow new IllegalArgumentException(\"Unexpected ENUM size in core file\");%n");
 			writer.format("\t\t\t\t}%n");
@@ -1095,7 +1098,7 @@ public class PointerGenerator {
 		if (cacheFields) {
 			writer.format("\t\tif (CACHE_FIELDS) {%n");
 			writer.format("\t\t\tif (%s_cache == null) {%n", getter);
-			writer.format("\t\t\t\t%s_cache = new Float(getFloatAtOffset(%s._%sOffset_));%n", getter, structure.getName(), offsetConstant);
+			writer.format("\t\t\t\t%s_cache = Float.valueOf(getFloatAtOffset(%s._%sOffset_));%n", getter, structure.getName(), offsetConstant);
 			writer.format("\t\t\t}%n");
 			writer.format("\t\t\treturn %s_cache.floatValue();%n", getter);
 			writer.format("\t\t} else {%n\t");
@@ -1118,27 +1121,29 @@ public class PointerGenerator {
 	 * the pointer stubs generated from this code so that incompatibilities will
 	 * be discovered at build time, rather than at run time.
 	 */
-	private static String generalizeSimpleType(String type) {
-		if ("I32".equals(type) || "I64".equals(type)) {
-			return "IDATA";
-		} else if ("U32".equals(type) || "U64".equals(type)) {
-			return "UDATA";
-		} else {
-			return type;
+	private String generalizeSimpleType(String type) {
+		if (generalizeSimpleTypes) {
+			if ("I32".equals(type) || "I64".equals(type)) {
+				return "IDATA";
+			} else if ("U32".equals(type) || "U64".equals(type)) {
+				return "UDATA";
+			}
 		}
+		return type;
 	}
 
 	/*
 	 * Like generalizeSimpleType() above, but for pointer types.
 	 */
-	private static String generalizeSimplePointer(String type) {
-		if ("I32Pointer".equals(type) || "I64Pointer".equals(type)) {
-			return "IDATAPointer";
-		} else if ("U32Pointer".equals(type) || "U64Pointer".equals(type)) {
-			return "UDATAPointer";
-		} else {
-			return type;
+	private String generalizeSimplePointer(String type) {
+		if (generalizeSimpleTypes) {
+			if ("I32Pointer".equals(type) || "I64Pointer".equals(type)) {
+				return "IDATAPointer";
+			} else if ("U32Pointer".equals(type) || "U64Pointer".equals(type)) {
+				return "UDATAPointer";
+			}
 		}
+		return type;
 	}
 
 	private void writeSimpleTypeMethod(PrintWriter writer, StructureDescriptor structure, FieldDescriptor fieldDescriptor, int type) {
@@ -1545,8 +1550,8 @@ public class PointerGenerator {
 	}
 
 	private static void writeBuildFlagImports(PrintWriter writer) {
-		writer.println("import java.util.HashMap;");
 		writer.println("import java.lang.reflect.Field;");
+		writer.println("import java.util.HashSet;");
 	}
 
 	private void parseArgs(String[] args) {
@@ -1568,11 +1573,13 @@ public class PointerGenerator {
 		for (String key : opts.keySet()) {
 			String value = opts.get(key);
 			if (value == null && !key.equals("-s") && !key.equals("-h")) {
-				System.err.println("The option " + key + " has not been set.\n");
+				System.err.println("The option " + key + " has not been set.");
 				printHelp();
 				System.exit(1);
 			}
 		}
+
+		generalizeSimpleTypes = "29".equals(opts.get("-v"));
 	}
 
 	/**
