@@ -1,5 +1,5 @@
 /*******************************************************************************
- * Copyright (c) 2005, 2019 IBM Corp. and others
+ * Copyright (c) 2005, 2020 IBM Corp. and others
  *
  * This program and the accompanying materials are made available under
  * the terms of the Eclipse Public License 2.0 which accompanies this
@@ -61,6 +61,7 @@ import javax.management.openmbean.CompositeData;
 
 import com.ibm.lang.management.MemoryMXBean;
 
+import org.openj9.test.util.VersionCheck;
 import org.openj9.test.util.process.Task;
 
 // These classes are not public API.
@@ -74,6 +75,8 @@ public class TestMemoryMXBean {
 	private static Logger logger = Logger.getLogger(TestMemoryMXBean.class);
 	private static final Map<String, AttributeData> attribs;
 	private static final HashSet<String> ignoredAttributes;
+
+	private static final int javaVersion = VersionCheck.major();
 
 	static {
 		ignoredAttributes = new HashSet<>();
@@ -107,8 +110,16 @@ public class TestMemoryMXBean {
 				new AttributeData(Long.TYPE.getName(), true, false, false));
 		attribs.put("SharedClassCacheFreeSpace", new AttributeData(Long.TYPE.getName(), true, false, false));
 		attribs.put("GCMode", new AttributeData(String.class.getName(), true, false, false));
-		attribs.put("GCMasterThreadCpuUsed", new AttributeData(Long.TYPE.getName(), true, false, false));
-		attribs.put("GCSlaveThreadsCpuUsed", new AttributeData(Long.TYPE.getName(), true, false, false));
+		attribs.put("GCMainThreadCpuUsed", new AttributeData(Long.TYPE.getName(), true, false, false));
+		/* GCMasterThreadCpuUsed was deprecated for removal in Java 15. */
+		if (javaVersion < 16) {
+			attribs.put("GCMasterThreadCpuUsed", new AttributeData(Long.TYPE.getName(), true, false, false));
+		}
+		attribs.put("GCWorkerThreadsCpuUsed", new AttributeData(Long.TYPE.getName(), true, false, false));
+		/* GCSlaveThreadsCpuUsed was deprecated for removal in Java 15. */ 
+		if (javaVersion < 16) {
+			attribs.put("GCSlaveThreadsCpuUsed", new AttributeData(Long.TYPE.getName(), true, false, false));
+		}
 		attribs.put("MaximumGCThreads", new AttributeData(Integer.TYPE.getName(), true, false, false));
 		attribs.put("CurrentGCThreads", new AttributeData(Integer.TYPE.getName(), true, false, false));
 	}// end static initializer
@@ -131,6 +142,10 @@ public class TestMemoryMXBean {
 
 	@AfterClass
 	protected void tearDown() throws Exception {
+		MemoryMXBean bean = (MemoryMXBean)ManagementFactory.getMemoryMXBean();
+		if (bean.isSetMaxHeapSizeSupported()) {
+			bean.setMaxHeapSize(bean.getMaxHeapSizeLimit());
+		}
 	}
 
 	static class ClassForTestMaxHeapSize implements Task {
@@ -249,7 +264,7 @@ public class TestMemoryMXBean {
 		// The only writable attribute of this type of bean
 		Attribute attr = null;
 		try {
-			attr = new Attribute("Verbose", new Boolean(true));
+			attr = new Attribute("Verbose", Boolean.valueOf(true));
 			mbs.setAttribute(objName, attr);
 		} catch (AttributeNotFoundException e) {
 			// An unlikely exception - if this occurs, we can't proceed with the test.
@@ -301,7 +316,7 @@ public class TestMemoryMXBean {
 			logger.debug("Exception occurred, as expected: " + e1.getMessage());
 		}
 
-		attr = new Attribute("ObjectPendingFinalizationCount", new Long(38));
+		attr = new Attribute("ObjectPendingFinalizationCount", Long.valueOf(38));
 		try {
 			mbs.setAttribute(objName, attr);
 			Assert.fail("Unreacheable code: should have thrown an exception.");
@@ -318,7 +333,7 @@ public class TestMemoryMXBean {
 		}
 
 		// Try and set the Verbose attribute with an incorrect type.
-		attr = new Attribute("Verbose", new Long(42));
+		attr = new Attribute("Verbose", Long.valueOf(42));
 		try {
 			mbs.setAttribute(objName, attr);
 			Assert.fail("Unreacheable code: should have thrown an exception.");
@@ -335,7 +350,7 @@ public class TestMemoryMXBean {
 
 		//set Verbose back to false
 		try {
-			attr = new Attribute("Verbose", new Boolean(false));
+			attr = new Attribute("Verbose", Boolean.valueOf(false));
 			mbs.setAttribute(objName, attr);
 		} catch (AttributeNotFoundException e) {
 			// An unlikely exception - if this occurs, we can't proceed with the test.
@@ -607,7 +622,7 @@ public class TestMemoryMXBean {
 			}
 		}
 		AttributeList attList = new AttributeList();
-		Attribute heapSize = new Attribute("MaxHeapSize", new Long(newHeapSize));
+		Attribute heapSize = new Attribute("MaxHeapSize", Long.valueOf(newHeapSize));
 		attList.add(heapSize);
 		AttributeList setAttrs = null;
 		try {
@@ -637,7 +652,7 @@ public class TestMemoryMXBean {
 	public final void testSetAttributes() {
 		// Ideal scenario...
 		AttributeList attList = new AttributeList();
-		Attribute verbose = new Attribute("Verbose", new Boolean(false));
+		Attribute verbose = new Attribute("Verbose", Boolean.valueOf(false));
 		attList.add(verbose);
 		AttributeList setAttrs = null;
 		try {
@@ -654,7 +669,7 @@ public class TestMemoryMXBean {
 
 		// A failure scenario - a non-existent attribute...
 		AttributeList badList = new AttributeList();
-		Attribute garbage = new Attribute("H.R. Puffenstuff", new Long(2888));
+		Attribute garbage = new Attribute("H.R. Puffenstuff", Long.valueOf(2888));
 		badList.add(garbage);
 		try {
 			setAttrs = mbs.setAttributes(objName, badList);
@@ -669,7 +684,7 @@ public class TestMemoryMXBean {
 
 		// Another failure scenario - a non-writable attribute...
 		badList = new AttributeList();
-		garbage = new Attribute("ObjectPendingFinalizationCount", new Integer(2888));
+		garbage = new Attribute("ObjectPendingFinalizationCount", Integer.valueOf(2888));
 		badList.add(garbage);
 		try {
 			setAttrs = mbs.setAttributes(objName, badList);
@@ -684,7 +699,7 @@ public class TestMemoryMXBean {
 
 		// Yet another failure scenario - a wrongly-typed attribute...
 		badList = new AttributeList();
-		garbage = new Attribute("Verbose", new Long(2888));
+		garbage = new Attribute("Verbose", Long.valueOf(2888));
 		badList.add(garbage);
 		try {
 			setAttrs = mbs.setAttributes(objName, badList);
@@ -739,7 +754,11 @@ public class TestMemoryMXBean {
 		// Eight attributes - some writable.
 		MBeanAttributeInfo[] attributes = mbi.getAttributes();
 		AssertJUnit.assertNotNull(attributes);
-		AssertJUnit.assertTrue(attributes.length == 24);
+		if (javaVersion >= 16) {
+			AssertJUnit.assertTrue(attributes.length == 24);
+		} else {
+			AssertJUnit.assertTrue(attributes.length == 26);
+		}
 		for (int i = 0; i < attributes.length; i++) {
 			MBeanAttributeInfo info = attributes[i];
 			AssertJUnit.assertNotNull(info);
@@ -794,6 +813,8 @@ public class TestMemoryMXBean {
 			try {
 				mb.setMaxHeapSize(newHeapSize);
 				AssertJUnit.assertEquals(newHeapSize, mb.getMaxHeapSize());
+				// reset to the limit
+				mb.setMaxHeapSize(mb.getMaxHeapSizeLimit());
 			} catch (IllegalArgumentException i) {
 
 			}
